--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
-/* body {
+body {
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
     font-family: sans-serif;
     background-color: #ffffff
-} */
+}
 .Back-Image{
     background-image: url('./Images//dots.png');
     margin-bottom: 30px;
