--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,5 +1,5 @@
 .home-header{
-    background-image: url('../Images/blue-banner.png');
+    background-image: url('../Images/yellow-banner.png');
 }
 .row-data{
     display: flex ;
